--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ footer { text-align:center; padding:10px; background:#f3f4f6; font-size:14px; }
 </head>
 <body>
 <div class="container">
-  <h1>Psych Brief — Test Update</h1>
+  <h1>Psych Brief</h1>
   <p>AI-curated psychiatry studies and reviews — continuously updated, elegantly delivered<br>
   A mental health research intelligence source for clinicians, investigators, educators, students, and domain observers</p>
 
