--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Psych Brief</title>
 <style>
-body { font-family: sans-serif; margin:0; padding:0; background:linear-gradient(to bottom, #d7e8f7, #eef6f9); color:#111; }
+body { font-family: sans-serif; margin:0; padding:0; background:linear-gradient(to bottom, #e8f4fb, #f9fafb); color:#111; }
 .container { max-width:1200px; margin:0 auto; padding:20px; }
 h1 { font-size:28px; font-weight:bold; margin-bottom:10px; }
 p { margin-bottom:20px; color:#555; }
