--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Psych Brief</title>
+<link rel="icon" type="image/png" href="favicon.png">
 <style>
 body { font-family: sans-serif; margin:0; padding:0; background:linear-gradient(to bottom, #e8f4fb, #f9fafb); color:#111; }
 .container { max-width:1200px; margin:0 auto; padding:20px; }
