--- a/index.html
+++ b/index.html
@@ -133,5 +133,22 @@ globalSearch.addEventListener('input',renderCards);
 renderFilters();
 renderCards();
 </script>
-</body>
-</html>
+import { Analytics } from '@vercel/analytics/next';
+ 
+export default function RootLayout({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
+  return (
+    <html lang="en">
+      <head>
+        <title>Next.js</title>
+      </head>
+      <body>
+        {children}
+        <Analytics />
+      </body>
+    </html>
+  );
+}
