--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@ p { margin-bottom:20px; color:#555; }
 .filter-btn.active { background-color:#b4e0f8; }
 .search-box { padding:7px; border-radius:8px; border:1px solid #ccc; flex-grow:1; min-width:150px; }
 .cards { display:grid; grid-template-columns:repeat(auto-fill,minmax(250px,1fr)); gap:20px; }
-.card { padding:15px; background:white; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,0.1); position:relative; }
+.card {
+  padding:15px;
+  background:white;
+  border-radius:12px;
+  box-shadow:0 2px 6px rgba(0,0,0,0.1);
+  position:relative;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.card:hover {
+  transform: translateY(-4px);
+  box-shadow:0 6px 16px rgba(0,0,0,0.15);
+}
 .card h2 { font-size:115%; margin:30px 0 5px 0; }
 .card p { font-size:80%; margin:0 0 10px 0; color:#555; }
 .card ul { font-size:80%; margin:5px 0 0 20px; padding:0; }
