--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ footer { text-align:center; padding:10px; background:#f3f4f6; font-size:14px; }
 <div class="container">
   <h1>Psych Brief</h1>
   <p>AI-curated psychiatry studies and reviews — continuously updated, elegantly delivered<br>
-  A mental health research intelligence source for clinicians, investigators, educators, students, and domain observers</p>
+  A mental health research intelligence source</p>
 
   <div class="top-bar">
     <input type="text" id="globalSearch" class="search-box" placeholder="Search studies...">
