--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@ p { margin-bottom:20px; color:#555; }
 .search-box { padding:7px; border-radius:8px; border:1px solid #ccc; flex-grow:1; min-width:150px; }
 .cards { display:grid; grid-template-columns:repeat(auto-fill,minmax(250px,1fr)); gap:20px; }
 .card {
-  padding:15px;
+  padding:20px;
   background:white;
-  border-radius:12px;
+  border-radius:14px;
   box-shadow:0 2px 6px rgba(0,0,0,0.1);
   position:relative;
+  line-height:1.45;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
@@ -30,11 +31,42 @@ p { margin-bottom:20px; color:#555; }
   transform: translateY(-4px);
   box-shadow:0 6px 16px rgba(0,0,0,0.15);
 }
-.card h2 { font-size:115%; margin:30px 0 5px 0; }
-.card p { font-size:80%; margin:0 0 10px 0; color:#555; }
-.card ul { font-size:80%; margin:5px 0 0 20px; padding:0; }
-.categories { position:absolute; top:10px; left:10px; display:flex; gap:4px; }
-.category { background:none; border:none; padding:2px 4px; border-radius:5px; font-size:12px; display:flex; align-items:center; color:black; }
+.card h2 {
+  font-size:120%;
+  font-weight:600;
+  margin:35px 0 8px 0;
+  line-height:1.3;
+}
+
+.card p {
+  font-size:85%;
+  margin:0 0 12px 0;
+  color:#444;
+}
+
+.card ul {
+  font-size:85%;
+  margin:10px 0 0 20px;
+  padding:0;
+}
+
+.categories {
+  position:absolute;
+  top:12px;
+  left:12px;
+  display:flex;
+  gap:6px;
+}
+
+.category {
+  background:rgba(0,0,0,0.05);
+  padding:3px 6px;
+  border-radius:6px;
+  font-size:11px;
+  font-weight:500;
+  color:#333;
+}
+
 .metadata { position:absolute; top:10px; right:10px; font-size:12px; color:#333; }
 .archive-section { margin-top:30px; padding:15px; background:#e5e7eb; border-radius:10px; text-align:center; color:#555; display:none; }
 footer { text-align:center; padding:10px; background:#f3f4f6; font-size:14px; }
