--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@ p { margin-bottom:20px; color:#555; }
 }
 
 .category {
-  background:rgba(0,0,0,0.05);
-  padding:3px 6px;
-  border-radius:6px;
-  font-size:11px;
-  font-weight:500;
-  color:#333;
+  background:none !important;
+  padding:0;              /* removes any box around the icon */
+  border-radius:0;        /* ensures no subtle rounding shows */
+  font-size:12px;
+  display:flex;
+  align-items:center;
+  color:black;
 }
 
 .metadata { position:absolute; top:10px; right:10px; font-size:12px; color:#333; }
