--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@ const archiveStudies = [
   {id:15,title:"Social cognition deficits in schizophrenia: updated meta-analysis",authors:["Garcia M","Tanaka R"],journal:"Schizophr Bull",N:120,date:"2025-09-28",doi:"10.5656/sb.2025.015",type:"Meta-analysis",categories:["Psychosis"],pubmed:"https://pubmed.ncbi.nlm.nih.gov/41697890/",ai_insights:["N=120","Adults with schizophrenia","Persistent deficits in emotion recognition","Linked to functional outcomes","Consistent across cultures","Highlights unmet rehabilitation need","Encourages cognitive remediation"]}
 ];
 
-const categoryIcons = {"Mood":"☀️","Anxiety":"🌀","Psychosis":"⚡","Neurodevelopmental":"🧠","Other":"⋯","Sleep-wake":"🌙"};
-const categories = ["All","Mood","Anxiety","Psychosis","Neurodevelopmental","Sleep-wake","Other"];
+const categoryIcons = {"Mood":"☀️","Anxiety":"🌀","Psychosis":"⚡","Neurodevelopmental":"🧠","Other":"⋯","Sleep-Wake":"🌙"};
+const categories = ["All","Mood","Anxiety","Psychosis","Neurodevelopmental","Sleep-Wake","Other"];
 let activeCategory = "All";
 let showingArchive = false;
 
